[package]
name = "keyboard-paste-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
rdev = "0.5.3"
reqwest = { version = "0.11", features = ["json"] }
clipboard = "0.5.0"
lazy_static = "1.4"
chrono = "0.4"
hashbrown = "0.15"
serialport = "4.2.0"
rodio = "0.17.3" 

[build-dependencies]
chrono = "0.4"